<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TCPConnection" Id="{2210dd1d-a382-49a5-a095-d9c9f4f32342}">
    <Declaration><![CDATA[TYPE ST_TCPConnection :
STRUCT
	bSocketConnect		:BOOL;
	sRemoteHost			:STRING;
	nRemotePort			:UDINT;
	tTimeOut			:TIME;
	bReset				:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>