<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TCPConnection_HMI_CMD" Id="{84b01e7f-4d40-40b0-aab8-df3f6dbbd392}">
    <Declaration><![CDATA[TYPE ST_TCPConnection_HMI_CMD :
STRUCT
	bWriteSocketConnect		:BOOL;
	bReadSocketConnect		:BOOL;
	bResetRegistry			:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>