<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_TCPIP" Id="{e26f0609-c5dd-4c0e-bab1-8c4ef3547268}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_TCPIP 
VAR	
	bInit 						:BOOL := TRUE;
	bReset						:BOOL;
	
	stReadTCP					:ST_TCPConnection;
	fbReadFromCameraTCP			:FB_ReadTCP;
	bConnectToReadSocket		:BOOL;
	
	stWriteTCP					:ST_TCPConnection;
	fbWriteToHLZ				:FB_WriteTCP;
	bConnectToWriteSocket		:BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Init
IF bInit THEN	
	bInit := FALSE;
END_IF


A_ReadFromCamera();
A_WriteToHlz();


//Reset Commands
GVL_HMI.stTCPConnectionCmd.bResetRegistry := FALSE;
GVL_HMI.stTCPConnectionCmd.bReadSocketConnect := FALSE;
GVL_HMI.stTCPConnectionCmd.bWriteSocketConnect := FALSE;
]]></ST>
    </Implementation>
    <Action Name="A_ReadFromCamera" Id="{fa2fa6f9-072d-42cf-9835-c8d01007dda3}">
      <Implementation>
        <ST><![CDATA[//Initialize Read TCP
stReadTCP.sRemoteHost := '10.12.5.10';
stReadTCP.nRemotePort := 51236;
stReadTCP.tTimeOut := T#45S;
stReadTCP.bSocketConnect := GVL_HMI.stTCPConnectionCmd.bReadSocketConnect;
stReadTCP.bReset := GVL_HMI.stTCPConnectionCmd.bResetRegistry;

//Call Read TCP
fbReadFromCameraTCP(
	stTCPConnection:=stReadTCP,
	aEANRegistry=>GVL_HMI.stTCPConnectionStatus.aEANRegistry,
	bIsConnected=>GVL_HMI.stTCPConnectionStatus.bCameraReadSocketIsConnected);
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_WriteToHlz" Id="{029a87b5-d519-4d88-b685-d7af7eb27bad}">
      <Implementation>
        <ST><![CDATA[//Initialize Write TCP
stWriteTCP.sRemoteHost := '10.12.5.10';
stWriteTCP.nRemotePort := 51237;
stWriteTCP.tTimeOut := T#45S;
stWriteTCP.bSocketConnect := GVL_HMI.stTCPConnectionCmd.bWriteSocketConnect;
stWriteTCP.bReset := GVL_HMI.stTCPConnectionCmd.bResetRegistry;


//Call Write TCP
fbWriteToHLZ(
	aEANRegistry:=fbReadFromCameraTCP.aEANRegistry,
	stTCPConnection:=stWriteTCP,
	bIsConnected=>GVL_HMI.stTCPConnectionStatus.bHlzWriteSocketIsConnected);


]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="PRG_TCPIP">
      <LineId Id="469" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="328" Count="1" />
      <LineId Id="478" Count="0" />
      <LineId Id="503" Count="0" />
      <LineId Id="519" Count="0" />
      <LineId Id="538" Count="0" />
      <LineId Id="515" Count="0" />
      <LineId Id="480" Count="0" />
      <LineId Id="512" Count="2" />
      <LineId Id="494" Count="0" />
      <LineId Id="496" Count="0" />
    </LineIds>
    <LineIds Name="PRG_TCPIP.A_ReadFromCamera">
      <LineId Id="2" Count="11" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="PRG_TCPIP.A_WriteToHlz">
      <LineId Id="2" Count="14" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>